[package]
name = "wtns-file"
version = "0.1.5-alpha.0"
edition = "2018"
description = "Snarkjs .wtns binary file format parser/serializer "
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
homepage = "https://github.com/zeropoolnetwork/zeropool-utils"
repository = "https://github.com/zeropoolnetwork/zeropool-utils"
license = "MIT OR Apache-2.0"
exclude = [
    "tests/*",
]

[dependencies]
byteorder = "1.4.2"
